Implemented task R-043-04-thumbnail-media-api
